@@ -1,6 +1,8 @@
-2017-05-08 (0.12.10)
+2017-05-14 (0.12.10)
 	COMMON: Optimise execution between repeated kwLINE,kwGOTO segments
 	COMMON: Cleanup redundant typedefs
+	SDL: Debugger only show local variables when in SUB or FUNC
+	SDL: Fix crash using debugger when pressing arrow key
 
 2017-05-08 (0.12.10)
 	COMMON: Fix FUNC call as pseudo class method
